lots of updates

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,10 @@
 
     <!-- Load JS -->
     <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+    <script src="/js/typed.min.js"></script>
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:300,600" rel="stylesheet">
 </head>
 <body>
     {{ content }}
