--- a/css/main.scss
+++ b/css/main.scss
@@ -3,6 +3,10 @@
 ---
 @charset "utf-8";
 
+* {
+    font-family: 'Source Code Pro', monospace;
+}
+
 body {
     background: #000;
     color: #fff;
@@ -18,9 +22,12 @@ body {
     align-items: center;
     display: flex;
     justify-content: center;
-    height: 100vh;
+    flex-direction: column;
+    height: 80vh;
     width: 100%;
 }
+
+// LOGO
 
 .logo-placeholder {
     display: none;
@@ -28,13 +35,16 @@ body {
 
 .logo-wrapper {
     position: relative;
-    width: 80%;
-    height: 20vh;
+    width: 500px;
+    height: 100px;
+    margin-bottom: 30px;
+    margin-top: 60px;
 }
 
 .logo {
     fill: #51FFE8;
     position: absolute;
+    transition: opacity 0.5s ease-in;
     width: 100%;
     -webkit-filter: drop-shadow( 0px 0px 5px #51FFE8 );
             filter: drop-shadow( 0px 0px 5px #51FFE8 ); /* Same syntax as box-shadow */
@@ -50,11 +60,106 @@ body {
 }
 
 .hidden {
-    display: none;
+    display: none;;
 }
 
 @-webkit-keyframes pulse {
     0% {opacity: 0;}
     50% {opacity: 1;}
     100% {opacity: 0;}
+}
+
+
+// FORM
+
+.email-input {
+    appearance: none;
+    background: #000;
+    border: none;
+    border-bottom: 1px solid #51FFE8;
+    box-shadow: none;
+    color: #fff;
+    outline: none;
+    text-transform: uppercase;
+    font-size: 14px;
+    width: 200px;
+}
+
+input::-webkit-input-placeholder {
+    color: #51FFE8 !important;
+}
+
+input:-moz-placeholder { /* Firefox 18- */
+    color: #51FFE8 !important;
+}
+
+input::-moz-placeholder {  /* Firefox 19+ */
+    color: #51FFE8 !important;
+}
+
+input:-ms-input-placeholder {
+    color: #51FFE8 !important;
+}
+
+.button {
+    appearance: none;
+    background: #000;
+    border: none;
+    color: #51FFE8;
+    text-transform: uppercase;
+    font-size: 14px;
+}
+
+.form-wrapper {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    height: 20vh;
+    width: 100%;
+}
+
+// CURSOR
+
+.typed-cursor{
+    opacity: 1;
+    -webkit-animation: blink 0.7s infinite;
+    -moz-animation: blink 0.7s infinite;
+    animation: blink 0.7s infinite;
+}
+
+@keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+}
+
+@-webkit-keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+}
+
+@-moz-keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+}
+
+
+// CONTACT
+
+.contact {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+}
+
+.contact span {
+    color: #777;
+    font-size: 12px;
+}
+
+.contact span a {
+    color: #777;
 }
