--- a/css/main.scss
+++ b/css/main.scss
@@ -25,7 +25,13 @@ body {
     flex-direction: column;
     height: 80vh;
     width: 100%;
+    min-height: 300px;
+    @media (max-width: 550px) {
+        min-height: 200px;
+    }
 }
+
+
 
 // LOGO
 
@@ -39,6 +45,16 @@ body {
     height: 100px;
     margin-bottom: 30px;
     margin-top: 60px;
+
+    @media (max-width: 550px) {
+        width: 300px;
+        height: 60px;
+    }
+
+    @media (max-width: 320px) {
+        width: 250px;
+        height: 45px;
+    }
 }
 
 .logo {
@@ -82,7 +98,16 @@ body {
     outline: none;
     text-transform: uppercase;
     font-size: 14px;
-    width: 200px;
+    width: 300px;
+
+    @media (max-width: 550px) {
+        text-align: center;
+        width: 300px;
+    }
+
+    @media (max-width: 320px) {
+         width: 250px;
+    }
 }
 
 input::-webkit-input-placeholder {
@@ -108,6 +133,10 @@ input:-ms-input-placeholder {
     color: #51FFE8;
     text-transform: uppercase;
     font-size: 14px;
+
+    @media (max-width: 550px) {
+        margin-top: 20px;
+    }
 }
 
 .form-wrapper {
@@ -117,9 +146,29 @@ input:-ms-input-placeholder {
     flex-direction: row;
     height: 20vh;
     width: 100%;
+
+    @media (max-width: 550px) {
+        flex-direction: column;
+    }
 }
 
 // CURSOR
+
+.subheader {
+    @media (max-width: 550px) {
+        font-size: 14px;
+        width: 300px;
+        height: 60px;
+        text-align: center;
+    }
+
+    @media (max-width: 320px) {
+        font-size: 14px;
+        width: 250px;
+        height: 45px;
+        text-align: center;
+    }
+}
 
 .typed-cursor{
     opacity: 1;
