--- a/css/main.scss
+++ b/css/main.scss
@@ -3,6 +3,218 @@
 ---
 @charset "utf-8";
 
+// * {
+//     font-family: 'Source Code Pro', monospace;
+// }
+
+// body {
+//     background: #000;
+//     color: #fff;
+//     position: absolute;
+//     top: 0;
+//     bottom: 0;
+//     right: 0;
+//     left: 0;
+//     margin: 0;
+// }
+
+// .hero {
+//     align-items: center;
+//     display: flex;
+//     justify-content: center;
+//     flex-direction: column;
+//     height: 80vh;
+//     width: 100%;
+//     min-height: 300px;
+//     @media (max-width: 550px) {
+//         min-height: 200px;
+//     }
+// }
+
+
+
+// // LOGO
+
+// .logo-placeholder {
+//     display: none;
+// }
+
+// .logo-wrapper {
+//     position: relative;
+//     width: 500px;
+//     height: 100px;
+//     margin-bottom: 30px;
+//     margin-top: 60px;
+
+//     @media (max-width: 550px) {
+//         width: 300px;
+//         height: 60px;
+//     }
+
+//     @media (max-width: 320px) {
+//         width: 250px;
+//         height: 45px;
+//     }
+// }
+
+// .logo {
+//     fill: #51FFE8;
+//     position: absolute;
+//     transition: opacity 0.5s ease-in;
+//     width: 100%;
+//     -webkit-filter: drop-shadow( 0px 0px 5px #51FFE8 );
+//             filter: drop-shadow( 0px 0px 5px #51FFE8 ); /* Same syntax as box-shadow */
+// }
+
+// .logo .svg {
+//     width: 100%;
+// }
+
+// .pulse {
+//     fill: #51FFE8;
+//     -webkit-animation: pulse 4s ease-in infinite;
+// }
+
+// .hidden {
+//     display: none;;
+// }
+
+// @-webkit-keyframes pulse {
+//     0% {opacity: 0;}
+//     50% {opacity: 1;}
+//     100% {opacity: 0;}
+// }
+
+
+// // FORM
+
+// .email-input {
+//     appearance: none;
+//     background: #000;
+//     border: none;
+//     border-bottom: 1px solid #51FFE8;
+//     box-shadow: none;
+//     color: #fff;
+//     outline: none;
+//     text-transform: uppercase;
+//     font-size: 14px;
+//     width: 300px;
+
+//     @media (max-width: 550px) {
+//         text-align: center;
+//         width: 300px;
+//     }
+
+//     @media (max-width: 320px) {
+//          width: 250px;
+//     }
+// }
+
+// input::-webkit-input-placeholder {
+//     color: #51FFE8 !important;
+// }
+
+// input:-moz-placeholder { /* Firefox 18- */
+//     color: #51FFE8 !important;
+// }
+
+// input::-moz-placeholder {  /* Firefox 19+ */
+//     color: #51FFE8 !important;
+// }
+
+// input:-ms-input-placeholder {
+//     color: #51FFE8 !important;
+// }
+
+// .button {
+//     appearance: none;
+//     background: #000;
+//     border: none;
+//     color: #51FFE8;
+//     text-transform: uppercase;
+//     font-size: 14px;
+
+//     @media (max-width: 550px) {
+//         margin-top: 20px;
+//     }
+// }
+
+// .form-wrapper {
+//     align-items: center;
+//     display: flex;
+//     justify-content: center;
+//     flex-direction: row;
+//     height: 20vh;
+//     width: 100%;
+
+//     @media (max-width: 550px) {
+//         flex-direction: column;
+//     }
+// }
+
+// // CURSOR
+
+// .subheader {
+//     @media (max-width: 550px) {
+//         font-size: 14px;
+//         width: 300px;
+//         height: 60px;
+//         text-align: center;
+//     }
+
+//     @media (max-width: 320px) {
+//         font-size: 14px;
+//         width: 250px;
+//         height: 45px;
+//         text-align: center;
+//     }
+// }
+
+// .typed-cursor{
+//     opacity: 1;
+//     -webkit-animation: blink 0.7s infinite;
+//     -moz-animation: blink 0.7s infinite;
+//     animation: blink 0.7s infinite;
+// }
+
+// @keyframes blink{
+//     0% { opacity:1; }
+//     50% { opacity:0; }
+//     100% { opacity:1; }
+// }
+
+// @-webkit-keyframes blink{
+//     0% { opacity:1; }
+//     50% { opacity:0; }
+//     100% { opacity:1; }
+// }
+
+// @-moz-keyframes blink{
+//     0% { opacity:1; }
+//     50% { opacity:0; }
+//     100% { opacity:1; }
+// }
+
+
+// // CONTACT
+
+// .contact {
+//     position: absolute;
+//     top: 20px;
+//     left: 20px;
+// }
+
+// .contact span {
+//     color: #777;
+//     font-size: 12px;
+// }
+
+// .contact span a {
+//     color: #777;
+// }
+
+
+// PREFIXED CSS
 * {
     font-family: 'Source Code Pro', monospace;
 }
@@ -19,10 +231,19 @@ body {
 }
 
 .hero {
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     height: 80vh;
     width: 100%;
     min-height: 300px;
@@ -60,6 +281,7 @@ body {
 .logo {
     fill: #51FFE8;
     position: absolute;
+    -webkit-transition: opacity 0.5s ease-in;
     transition: opacity 0.5s ease-in;
     width: 100%;
     -webkit-filter: drop-shadow( 0px 0px 5px #51FFE8 );
@@ -89,7 +311,9 @@ body {
 // FORM
 
 .email-input {
-    appearance: none;
+    -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none;
     background: #000;
     border: none;
     border-bottom: 1px solid #51FFE8;
@@ -127,7 +351,9 @@ input:-ms-input-placeholder {
 }
 
 .button {
-    appearance: none;
+    -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none;
     background: #000;
     border: none;
     color: #51FFE8;
@@ -140,15 +366,27 @@ input:-ms-input-placeholder {
 }
 
 .form-wrapper {
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     height: 20vh;
     width: 100%;
 
     @media (max-width: 550px) {
-        flex-direction: column;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
     }
 }
 
@@ -173,7 +411,6 @@ input:-ms-input-placeholder {
 .typed-cursor{
     opacity: 1;
     -webkit-animation: blink 0.7s infinite;
-    -moz-animation: blink 0.7s infinite;
     animation: blink 0.7s infinite;
 }
 
@@ -184,12 +421,6 @@ input:-ms-input-placeholder {
 }
 
 @-webkit-keyframes blink{
-    0% { opacity:1; }
-    50% { opacity:0; }
-    100% { opacity:1; }
-}
-
-@-moz-keyframes blink{
     0% { opacity:1; }
     50% { opacity:0; }
     100% { opacity:1; }
